About me HTML + CSS added

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     ></script>
     <link rel="stylesheet" href="/src/index.css" />
 
-    <title>Cressida Cox | Junior Frontend Developer</title>
+    <title>Cressida Cox | Junior Front-End Developer</title>
   </head>
   <body>
     <nav class="navbar fixed-top navbar-expand-lg">
@@ -73,7 +73,7 @@
     <div class="welcome">
       <div class="text">
         <h1>Cressida Cox</h1>
-        <h3>Junior Frontend Developer</h3>
+        <h3>Junior Front-End Developer</h3>
       </div>
     </div>
 
