Added responsive CSS to about page

--- a/about.html
+++ b/about.html
@@ -83,6 +83,11 @@
             something that would challenge that side of me once more.
           </p>
           <br />
+          <img
+            src="/images/portrait.png"
+            alt="Cressida Cox"
+            class="img-fluid d-md-block d-lg-none mt-2"
+          />
           <p>
             At the start of 2023, I made myself a New Year’s resolution to learn
             something new and that is how I found myself in the world of
@@ -93,7 +98,7 @@
             can see in my portfolio.
           </p>
         </div>
-        <div class="col d-none d-md-block">
+        <div class="responsive-img col">
           <img
             src="/images/portrait.png"
             alt="Cressida Cox"
