Added Portfolio HTML + CSS

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="Cressida Cox provides bespoke web design and development packages to her clients."
+      content="Cressida Cox is a Junior Front-End Developer that provides bespoke web design and development packages to her clients."
     />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
@@ -96,7 +96,7 @@
             </div>
           </div>
           <div class="responsive col text-center d-none d-md-block">
-            © 2023 Cressida Cox ~ All rights reserved
+            © 2023 Cressida Cox
           </div>
         </div>
       </div>
