--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="Cressida Cox provides bespoke web design and development packages to her clients."
+      content="Cressida Cox is a Junior Front-End Developer that provides bespoke web design and development packages to her clients."
     />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
