--- a/portfolio.html
+++ b/portfolio.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="Cressida Cox is a Junior Frontend Developer that provides bespoke web development packages to her clients."
+      content="Cressida Cox is a Junior Front-End Developer that provides bespoke web design and development packages to her clients."
     />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
@@ -23,14 +23,14 @@
       src="https://kit.fontawesome.com/173c8f1dfb.js"
       crossorigin="anonymous"
     ></script>
-    <link rel="stylesheet" href="/src/styles.css" />
+    <link rel="stylesheet" href="/src/portfolio.css" />
 
-    <title>Cressida Cox - Junior Frontend Developer</title>
+    <title>Cressida Cox | Junior Front-End Developer</title>
   </head>
   <body>
     <nav class="navbar fixed-top navbar-expand-lg">
       <div class="container-fluid">
-        <div class="navbar-brand">Cressida Cox Digital Services</div>
+        <div class="navbar-brand">Cressida Cox</div>
 
         <button
           class="navbar-toggler"
@@ -58,37 +58,122 @@
               <a class="nav-link" href="/portfolio.html">Portfolio </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/contact.html">Contact</a>
+              <a
+                class="nav-link"
+                href="https://drive.google.com/file/d/1CZ_H_U_T-faaPnIRClG8tL6Exg5FCHFC/view?usp=share_link"
+                target="_blank"
+                >Resume</a
+              >
             </li>
           </ul>
         </div>
       </div>
     </nav>
 
-    <div class="welcome">
-      <h1>Cressida Cox</h1>
-      <h2>Junior Frontend Developer</h2>
-      <a href="/contact.html" class="btn btn-branding">Let's Talk</a>
+    <div class="portfolio-container">
+      <h2>Take a look at what I've been working on...</h2>
+      <div class="container">
+        <div class="row mt-4">  
+          <div class="visit-website-container col">
+             <img src="/images/snow-leopard.png" alt="Snow Leopard" class="image img-fluid" />
+              <div class="middle">
+                <div class="text">
+                  <h3>Animal Project</h3>
+                  <p>Created for SheCodes Basics Final Project using HTML + CSS</p>
+                  <a href="https://snow-leopards.netlify.app/" target="_blank"><p>Visit Website</p></a>
+                </div>
+              </div>
+           </div>
+
+           <div class="visit-website-container col">
+             <img src="/images/fitness.png" alt="Fitness" class="image img-fluid" />
+              <div class="middle">
+                <div class="text">
+                  <h3>Dark Theme Project</h3>
+                  <p>Created for SheCodes Basics Add-On Final Project using HTML + CSS | JS</p>
+                  <a href="https://fitness-with-dark-theme-landing-page.netlify.app/" target="_blank"><p>Visit Website</p></a>
+                </div>
+              </div>
+           </div>
+       </div>
+
+        <div class="row mt-3">
+           <div class="visit-website-container col">
+             <img src="/images/imagine-dragons.png" alt="Popstar Challenge" class="image img-fluid" />
+              <div class="middle">
+                <div class="text">
+                  <h3>SheCodes Popstar Challenge</h3>
+                  <p>Created using HTML + CSS</p>
+                  <a href="https://imagine-dragons-popstar-challenge.netlify.app/" target="_blank"><p>Visit Website</p></a>
+                </div>
+              </div>
+           </div>
+        </div>
+
+         <div class="row mt-3">
+          <div class="visit-website-container col">
+             <img src="/images/weather-app.png" alt="Vanilla JS Weather App" class="image img-fluid" />
+              <div class="middle">
+                <div class="text">
+                  <h3>JS Weather App</h3>
+                  <p>Created for SheCodes Plus Final Project using HTML + CSS | JS </p>
+                  <a href="https://weather-app-using-vanillajs.netlify.app/" target="_blank"><p>Visit Website</p></a>
+                </div>
+              </div>
+           </div>
+
+           <div class="visit-website-container col">
+             <img src="/images/world-clock.png" alt="World Clock" class="image img-fluid" />
+              <div class="middle">
+                <div class="text">
+                  <h3>World Clock App</h3>
+                  <p>Created for SheCodes Plus Add-On Final Project using HTML + CSS | JS | API </p>
+                  <a href="https://world-clock-appproject.netlify.app/" target="_blank"><p>Visit Website</p></a>
+                </div>
+              </div>
+           </div>
+         </div>
+
+        <div class="row mt-3">
+          <div class="visit-website-container col">
+             <img src="/images/exmoor-travel-project.png" alt="Exmoor Travel Project" class="image img-fluid" />
+             <div class="middle">
+                <div class="text">
+                  <h3>Exmoor Travel Project</h3>
+                  <p>Created for SheCodes Responsive Add-On Final Project using HTML + CSS</p>
+                  <a href="https://exmoor-travel-project.netlify.app//" target="_blank"><p>Visit Website</p></a>
+                </div>
+              </div>
+           </div>
+        </div>
+
+        <div class="row mt-3">
+          <div class="visit-website-container col">
+             <img src="/images/react-weather-app.png" alt="React Weather App" class="image img-fluid" />
+              <div class="middle">
+                <div class="text">
+                  <h3>React Weather App</h3>
+                  <p>Created using HTML + CSS | React.js | API </p>
+                  <a href="https://weather-forecast-app-using-react.netlify.app/" target="_blank"><p>Visit Website</p></a>
+                </div>
+              </div>
+           </div>
+
+          <div class="visit-website-container col">
+             <img src="/images/react-dictionary-app.png" alt="React Dictionary App" class="image img-fluid" />
+              <div class="middle">
+                <div class="text">
+                  <h3>Dictionary App </h3>
+                  <p>Created using HTML + CSS | React.js | API</p>
+                  <a href="https://react-dictionary-app-project.netlify.app/" target="_blank"><p>Visit Website</p></a>
+                </div>
+              </div>
+           </div>
+        </div>
+
+       </div>
+      </div>
     </div>
 
-    <footer>
-      <div class="container">
-        <div class="row">
-          <div class="col d-none d-md-block">
-            <div class="social-links">
-              <a href="https://www.linkedin.com/in/cressida-cox/"
-                ><i class="fab fa-linkedin"></i
-              ></a>
-              <a href="https://github.com/Cressida-Cox"
-                ><i class="fab fa-github"></i
-              ></a>
-            </div>
-          </div>
-          <div class="responsive col">
-            © 2023 Cressida Cox ~ All rights reserved
-          </div>
-        </div>
-      </div>
-    </footer>
   </body>
 </html>
