Added new background for improved responsiveness plus altered css accordingly

--- a/index.html
+++ b/index.html
@@ -75,15 +75,20 @@
         <h1>Cressida Cox</h1>
         <h3>Junior Front-End Developer</h3>
       </div>
+      <div class="d-sm-block d-md-none">
+        <p class="hidden-section">
+          <a href="mailto:cox.cressie@yahoo.co.uk">cox.cressie@yahoo.co.uk</a>
+        </p>
+      </div>
     </div>
 
-    <footer>
+    <footer class="d-none d-md-block">
       <div class="container">
         <div class="row">
           <div class="col text-center">
             <a href="mailto:cox.cressie@yahoo.co.uk">cox.cressie@yahoo.co.uk</a>
           </div>
-          <div class="col text-center d-none d-md-block">
+          <div class="col text-center">
             <div class="social-links">
               <a
                 href="https://www.linkedin.com/in/cressida-cox/"
@@ -95,9 +100,7 @@
               ></a>
             </div>
           </div>
-          <div class="responsive col text-center d-none d-md-block">
-            © 2023 Cressida Cox
-          </div>
+          <div class="responsive col text-center">© 2023 Cressida Cox</div>
         </div>
       </div>
     </footer>
